fixed popup on small screen

--- a/src/style/_button.scss
+++ b/src/style/_button.scss
@@ -60,7 +60,6 @@
 
         button span {
           z-index: 1;
-          position: relative;
         }
     }
 
